gio/inotify/inotify-kernel.c
@@ -193,8 +193,10 @@ gboolean _ik_startup (void (*cb)(ik_event_t *event))
 #ifdef HAVE_INOTIFY_INIT1
   inotify_instance_fd = inotify_init1 (IN_CLOEXEC);
 #else
-  inotify_instance_fd = inotify_init ();
+  inotify_instance_fd = -1;
 #endif
+  if (inotify_instance_fd < 0)
+    inotify_instance_fd = inotify_init ();
 
   if (inotify_instance_fd < 0)
     return FALSE;
